EXTRA_DIST = \
3d.head.2.cml    cs2a.mol.cml     nsc2dmol.a1.mol  nsc3dmol.2.cml   readme.txt    \
3d.head.2an.cml  nsc2dcml.xml     nsc2dmol.a2.cml  nsc3dmol.2.mol   roundtrip.bat \
3d.head.sdf      nsc2dmol.1.cml   nsc2dmol.a2.mol  nsc3dmol.a1.cml  roundtrip.sh  \
CVS/             nsc2dmol.1.mol   nsc2dmol.mol     nsc3dmol.a1.mol  test.bat      \
README-UNIX.txt  nsc2dmol.2.cml   nsc3dcml.xml     nsc3dmol.a2.cml  test.sh       \
cs2a.cml         nsc2dmol.2.mol   nsc3dmol.1.cml   nsc3dmol.a2.mol                \
cs2a.mol         nsc2dmol.a1.cml  nsc3dmol.1.mol   nsc3dmol.mol

