EXTRA_DIST = CMakeLists.txt
INCLUDES = -I$(top_srcdir)/include/inchi

noinst_LTLIBRARIES = libinchi.la

libinchi_la_SOURCES = \
	ichi_bns.c ichican2.c ichicano.c ichicans.c ichiisot.c \
	ichilnct.c ichimak2.c ichimake.c ichimap1.c ichimap2.c \
	ichimap4.c ichinorm.c ichiparm.c ichiprt1.c ichiprt2.c \
	ichiprt3.c ichiqueu.c ichiread.c ichiring.c ichirvr1.c \
	ichirvr2.c ichirvr3.c ichirvr4.c ichirvr5.c ichirvr6.c \
	ichirvr7.c ichisort.c ichister.c ichitaut.c inchi_dll.c \
	inchi_dll_main.c runichi.c strutil.c util.c \
	ikey_base26.c inchi_dll_a2.c inchi_dll_a.c ikey_dll.c \
	sha2.c
